--- a/advisor/static/advisor/advisor_layout.css
+++ b/advisor/static/advisor/advisor_layout.css
@@ -132,7 +132,8 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.footnote {
+div.footnote {
     font-size: 14px;
-    text-align: center;
+    text-align: left;
+    clear: left;
 }
