--- a/advisor/templates/base.html
+++ b/advisor/templates/base.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'advisor/tables.css' %}">
 </head>
 <body>
-    
         <nav class="topnav" id="myTopnav">
-            <a href="" id="" > <img class="nav_logo" src="{% static 'images/MilliganBuffalo.jpg' %}"/></a>
+            <img class="nav_logo" src="{% static 'images/MilliganBuffalo.jpg' %}"/>
+            <span id="beta_version">Beta Version</span>
             {% if user.is_authenticated %}
                 <a class="topnav-right" href="{% url 'password_reset' %}" target="blank">Reset Password</a>    
                 <a class="topnav-right" href="{% url 'admin:index' %}" target="blank">Admin</a>
@@ -28,7 +28,7 @@
                 <a class="topnav-right" href="{% url 'login' %}">Log in</a>
             {% endif %}
                 <nav class="topnav-right" id="bar" >|</nav>
-                <a class="topnav-right" href="">About</a>
+                <a class="topnav-right" href="{% url 'advisor:about' %}">About</a>
                 {% comment %}<!--will be used to display certain courses-->
                 <a class="topnav-right" href="{% url 'advisor:courses' %}">Courses</a>
                 {% endcomment %}
