--- a/advisor/templates/advisor/advisee.html
+++ b/advisor/templates/advisor/advisee.html
@@ -137,6 +137,15 @@
                 <td class="total"></td>
                 <td class="total">{{ major_credits }}</td>
             </tr>
+            <tr>
+                <td colspan="3">
+                    {% if major_requirements_met is True %}
+                        <span id="true">Major requirements have been met</span>
+                    {% else %}
+                    <span id="false">Major requirements have NOT been met</span> 
+                    {% endif %}
+                </td>
+            </tr>
 
         </table>
             
@@ -313,7 +322,7 @@
 
     <br><br><br>
 
-    <table class="record_tables">
+    <table class="record_tables" id="total_table">
         <tr>
             <th>
                 Total Hours*
@@ -323,11 +332,13 @@
         <tr>
             <td class="center_data">{{ total_credits }}</td>
         </tr>
+        <tr>
+            <td><strong>*</strong><span id="footnote">&nbspDevelopmental courses with 
+            course numbers less than 100 are not included in the 128 hours
+            needed for graduation, but they are included in GPA.</span></td>
+        </tr>
     </table>
-    <p class="footnote"><strong>*</strong> Developmental courses with 
-        course numbers less than 100 are not included in the 128 hours
-        needed for graduation, but they are included in GPA.
-    </p>
+
 
     <br>
 
@@ -345,16 +356,19 @@
                 </tr>
             {% endif%}
         {% endfor %}
+        <tr>
+            <td>
+                <span id="double_dip_asterisk">**</span><span id="footnote"> After double-dipping three courses, 
+                additional courses that would normally count in both a major and 
+                second major/minor are only counted once.</span>
+            </td>
+        </tr>
     </table>
-    <div>
-    <p class ="footnote"><span id="double_dip_asterisk">**</span> After double-dipping three courses, 
-        additional courses that would normally count in both a major and 
-        second major/minor are only counted once.
-    </p>
-    </div>
-    </br>
 
-    <div id="notes">
+   
+    </br></br>
+
+    <div class="notes">
     <h2>Notes</h2>
     <ul>
         {% if notes != None %}
