--- a/advisor/static/advisor/advisor_layout.css
+++ b/advisor/static/advisor/advisor_layout.css
@@ -197,3 +197,33 @@ span.note_text {
     font-size: 16px;
     color: #181818;
 }
+
+
+span#note_edit {
+
+    font-size: 20px;
+    color: #0000FF;
+}
+
+span#note_header {
+    background: black;
+    color: rgb(234,113,37);
+    padding: 10px;
+}
+
+.note_form {
+    max-width: 400px;
+    border-radius: none;
+}
+
+#submit_notes {
+    margin-top: 20px;
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+    color: white;
+    background-color: rgb(234,113,37);
+    cursor:pointer;
+    border-radius: 5px;
+    text-align: center;
+}
