Add model formset for changing major course grades without the Django interface

--- a/advisor/templates/advisor/advisee.html
+++ b/advisor/templates/advisor/advisee.html
@@ -134,7 +134,9 @@
             {% endfor %}
             <tr>
                 <td class="total"></td>
-                <td class="total"></td>
+                <td class="total"><a class="note_edit" href="{{ major_grades_url }}">
+                    <span id="note_edit" class="far fa-edit"></span></a>
+                </td>
                 <td class="total">{{ major_credits }}</td>
             </tr>
             <tr>
