--- a/advisor/templates/advisor/elective_grades.html
+++ b/advisor/templates/advisor/elective_grades.html
@@ -8,20 +8,18 @@
 {% if user.is_authenticated %}
 
     <span id="note_header">{{ advisee_info.first_name }} {{ advisee_info.last_name }}</span>
-    
-    <div class="form_class">
-        <form class="grade_form" method="POST">
-            {% csrf_token %}
-            
-            {{ form.as_p }}
 
-            {% comment %}
-            <input class="submit_button" type="submit" value="Submit" >
-            {% endcomment %}
-            
-            <button id="submit_notes" type="submit">Submit</button>
-            
-        </form>   
+    <div>
+    <form method="POST">
+        {% csrf_token %}
+        
+        {{ form.as_p }}
+        <input type="submit" >
+
+        {% comment %}
+        <button id="submit_notes" type="submit">Save Grades</button>
+        {% endcomment %}
+    </form>       
     </div>
     
 
