--- a/advisor/templates/registration/login.html
+++ b/advisor/templates/registration/login.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="login">
-  <form method="post">
+  <form method="post" id="login">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="login_btn" type="submit">LOG IN</button>
